# Tokeniser

./: .gitignore  BUG_ANALYSIS_REPORT.md  DELIVERABLES.md  LEXEME_CANONICALIZATION_IMPLEMENTATION.md  LICENSE  LOUDS_DIAGNOSIS.md  LOUDS_FIX_SUMMARY.md  Makefile  PERFORMANCE.md  README.md  README_TESTING.md  SETUP_COMPLETE.md  TESTING_BENCHMARKING_GUIDE.md  TESTING_SETUP_SUMMARY.md  analyze_results.py  bench  benchmark.c  benchmark_analysis.c  benchmark_corpus.txt  benchmark_luganda.c  benchmark_results.txt  build_model.py  build_output.txt  execution_trace_schema.json  execution_trace_types.ts  gpu_fpga_implementations.cu  mini_corpus.txt  partition_corpus.py  pipeline_demo  quick_test.sh  requirements.txt  run_benchmarks.sh  run_tests.sh  scratch_test_tok  setup_model.sh  syllables.yaml  test_corpus.txt  test_engine_integration  test_engine_integration_dbg  test_syltrie  (+1861 more)
benchmark_results/: bench_20260510_093544.txt  benchmark_report_20260510_093526.txt  benchmark_report_20260510_093544.txt  benchmark_report_20260510_093558.txt
include/: beam_lattice.h  compress_context.h  corpus_utils.h  grapheme_scanner.h  morph_constraints.h  repair_tokenizer.h  repair_train.h  syllable_seeds.h  tokenizer.h  tokenizer_api.h  tokenizer_config.h  tokenizer_utils.h  truth_layer.h  unicode_props.h  utf8_luganda.h
python/: analyze_benchmark.py  analyze_louds_debug.py  analyze_syllabification.py  build_unicode_tables.py  debug_louds_vs_current.py  generate_syllable_seeds.py  unicode_table_generator.py
python_tokenizer/: MANIFEST.in  QUICKSTART.md  README.md  __init__.py  _ffi.py  breakdown.py  closed_loop_agent.py  config.py  dates.py  demo_closed_loop.py  example.py  luganda-fasttext-pretraining.py  luganda-lid.py  luganda_tokenizer.py  nums.py  phone.py  pipeline.py  pyproject.toml  seeds.py  setup.py  special_tokens.py  syllabifier.py  tokenizer.py
python_tokenizer/luganda_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_tokenizer/tests/: __init__.py  test_closed_loop.py  test_tokenizer.py
scratch/: check_consts.c
src/: android_asset_loader.c  benchmark.c  compress_context.c  corpus_utils.c  grammar.c  jni_wrapper.c  (+20 more)
(+91 files in other folders)
