[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luganda-tokenizer"
version = "1.0.0"
description = "High-performance Luganda tokenizer with Python bindings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Assisted Port"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["luganda", "tokenizer", "nlp", "african-languages", "bantu"]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "mypy", "ruff"]
numpy = ["numpy>=1.20.0"]
all = ["numpy>=1.20.0", "pytest", "pytest-cov", "black", "mypy", "ruff"]

[project.urls]
Homepage = "https://github.com/yourusername/luganda-tokenizer"
Documentation = "https://github.com/yourusername/luganda-tokenizer#readme"
Repository = "https://github.com/yourusername/luganda-tokenizer"
Issues = "https://github.com/yourusername/luganda-tokenizer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["python_tokenizer*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D105", "D107"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
